# grading-cloud-web

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json
.github/workflows/: claude-ci-failure.yml  claude-issue-scaffold.yml  claude-review.yml  deploy-frontend.yml
infra/: app.py  pyproject.toml
infra/stacks/: __init__.py  frontend_stack.py
src/: App.tsx  main.tsx
src/hooks/: use-auth.ts
src/lib/api/: client.ts
src/pages/student/: dashboard-page.tsx
src/pages/teacher/: dashboard-page.tsx
src/stores/: auth-store.ts
