[project]
name = "grading-cloud-web-infra"
version = "0.1.0"
description = "AWS CDK infrastructure package for grading-cloud-web."
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.200.0",
    "constructs>=10.0.0,<11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
